--- a/my-app/package.json
+++ b/my-app/package.json
@@ -32,6 +32,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
+    "react-query-auth": "^2.0.0",
     "react-spinners": "^0.13.7",
     "remixicon": "^2.5.0",
     "typescript": "4.9.4",
